atelier/tests/snapshots/service__systemd__com.example.backup.service.snap
---
source: tests/service.rs
expression: content
---
[Unit]
Description=Back up the notes once per weekday

[Service]
Type=oneshot
ExecStart=%h/.local/bin/backup notes
