atelier/tests/snapshots/service__systemd__com.example.web.service.snap
---
source: tests/service.rs
expression: content
---
[Unit]
Description=Web server on 127.0.0.1:8080

[Service]
ExecStart=%h/.local/bin/web serve --port=8080
Restart=always
RestartSec=10

[Install]
WantedBy=default.target
