atelier/tests/snapshots/service__systemd__com.theodo.cc-tap.dashboard.service.snap
---
source: tests/service.rs
expression: unit
---
[Unit]
Description=cc-tap dashboard on 127.0.0.1:3000

[Service]
ExecStart=%h/.local/bin/cc-tap-service dashboard
Restart=always
RestartSec=10

[Install]
WantedBy=default.target
