atelier/tests/snapshots/service__systemd__com.theodo.cc-tap.update.service.snap
---
source: tests/service.rs
expression: unit
---
[Unit]
Description=Install cc-tap@latest once per weekday

[Service]
Type=oneshot
ExecStart=%h/.local/bin/cc-tap-service update
